הבעיה שהייתה:התוכנית הייתה רצה רק פעם אחת כשהורדנו את הקבצים בהתחלה. שינוי קבצים: תיקון שרשור הקבצים לסוף הקובץ ודריסתו בכל פעם   מחדש ,הוספת הקבצים לספרייה עצמה.